# Comp_Tool_Final_Project

./: .gitignore  Makefile  Neura.py  README.md  TODO  clustering_results.csv  config.py  main.ipynb  main.py  output.err  output.out  playground.py  pyproject.toml  requirements.txt  submit.sh  submit_clustering.sh
dataloader/: dataloader.py
models/: NeuralNetwork.py
outputs/: output_lsh.out
results/: cluster_mappings.pkl  clustering_results.csv  scaler.pkl  test_predictions.npz
results/clustering/: cluster_mappings.pkl  clustering_results.csv  test_predictions.npz
results/lsh/: lsh_best_model.pkl
scripts/: check_for_douplicate_data_samples.py  data_processing.py  merge_datasets.py  run_clustering.py  run_data_processing.py  run_data_statistics.py  run_embedding.py  run_locality_sensitive_hashing.py  run_neural_network_model_training.py  run_statistics.ipynb  run_statistics.py  text_samples_statistics.py  train_neural_network_model.py
subset_data/: Merged_dataset_subset.csv  data_subset.parquet
utility/: Function_for_clustering.py  LSH.py  Y_ids.npy  clustering.py  clustering_utils.py  data_processing_utils.py  embedders.py  file_utils.py  locality_sensitive_hashing_utils.py  meta_data_utils.py  neural_network_utils.py  other_utils.py  running_clustering.py  statistics_utils.py  utils.py
